--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "antd": "^5.24.7",
     "encoding": "^0.1.13",
     "next": "13.5.11",
+    "ollama": "^0.5.15",
     "pino-pretty": "^13.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@types/node": "^20",
