--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
