--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
+    "viem": "^2.29.1",
+    "wagmi": "^2.15.2",
     "zod": "^3.24.4",
     "zod-to-json-schema": "^3.24.5"
   },
