--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "postinstall": "mkdir -p public/node_modules/@shutter-network/shutter-sdk/dist && cp node_modules/@shutter-network/shutter-sdk/dist/blst.* public/node_modules/@shutter-network/shutter-sdk/dist/"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
     "@dynamic-labs/ethereum": "^4.18.2",
     "@dynamic-labs/ethers-v6": "*",
     "@dynamic-labs/sdk-react-core": "^4.18.2",
+    "@langchain/anthropic": "^0.3.20",
+    "@langchain/core": "^0.3.55",
     "@safe-global/api-kit": "^3.0.1",
     "@shutter-network/shutter-sdk": "^0.0.1",
     "@tanstack/react-query": "^5.75.7",
     "ai": "^4.3.15",
     "antd": "^5.24.7",
     "encoding": "^0.1.13",
+    "langchain": "^0.3.24",
     "next": "13.5.11",
     "ollama": "^0.5.15",
     "ollama-ai-provider": "^1.2.0",
@@ -29,6 +33,7 @@
     "react-markdown": "^10.1.0",
     "viem": "^2.29.1",
     "wagmi": "^2.15.2",
+    "zod": "^3.24.4",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
