--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "mkdir -p public/node_modules/@shutter-network/shutter-sdk/dist && cp node_modules/@shutter-network/shutter-sdk/dist/blst.* public/node_modules/@shutter-network/shutter-sdk/dist/"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -15,15 +14,11 @@
     "@dynamic-labs/ethereum": "^4.18.2",
     "@dynamic-labs/ethers-v6": "*",
     "@dynamic-labs/sdk-react-core": "^4.18.2",
-    "@langchain/anthropic": "^0.3.20",
-    "@langchain/core": "^0.3.55",
     "@safe-global/api-kit": "^3.0.1",
-    "@shutter-network/shutter-sdk": "^0.0.1",
     "@tanstack/react-query": "^5.75.7",
     "ai": "^4.3.15",
     "antd": "^5.24.7",
     "encoding": "^0.1.13",
-    "langchain": "^0.3.24",
     "next": "13.5.11",
     "ollama": "^0.5.15",
     "ollama-ai-provider": "^1.2.0",
