--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@dynamic-labs/ethereum": "^4.18.2",
     "@dynamic-labs/ethers-v6": "*",
     "@dynamic-labs/sdk-react-core": "^4.18.2",
+    "@lifi/sdk": "^3.6.13",
+    "@lifi/widget": "^3.20.4",
     "@safe-global/api-kit": "^3.0.1",
     "@tanstack/react-query": "^5.75.7",
     "ai": "^4.3.15",
