--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gnosis-dapp-boilerplate",
+  "name": "subvisual-eth-lisbon-25",
   "version": "0.1.0",
   "private": true,
   "scripts": {
