--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      NEXT_PUBLIC_DYNAMIC_API_KEY: ${{ secrets.NEXT_PUBLIC_DYNAMIC_API_KEY }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
 
     steps:
       - name: Checkout repository
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Cache npm dependencies
         uses: actions/cache@v4.2.3
@@ -48,19 +48,6 @@ jobs:
 
       - name: Run lint
         run: npm run lint
-
-      - name: Setup Node.js for contracts
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22.10.0'
-
-      - name: Install smart-contract dependencies
-        working-directory: smart-contracts
-        run: npm ci
-
-      - name: Compile smart contracts
-        working-directory: smart-contracts
-        run: npx hardhat compile
 
       - name: Build Next.js app
         run: npm run build
